# libQ

./: .gitignore  .luarc.json  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  builddeps.sh  buildenv.sh  compile_commands.json  dev  getdeps.sh  meson.build  vcpkg_install.bat  vcpkg_install.sh  xmlMakefile
apr_ev/: Makefile  apr_events.c  apr_events.h  compile_commands.json  libaprev.c  test  test.c
include/: camera.h  cfifo.h  cycle_timer.h  event_timer.h  libQ.h  log.h  shader.h  xml.h
include/avr/: generic.h  m328p_defines.h
lua_stubs/: layout.lua
q3d/: Makefile  qcam.c  qcam.h
q3d/wayland/: Makefile  clay_renderer_opengl.c  clay_renderer_opengl.h  compile_commands.json  main.c  qlayout_renderer.c  qlayout_renderer.h  qwindow.c  qwindow.h
q3d/wayland/assets/: solid.frag.glsl  text.vert.glsl
qbrowser/: .gitignore  Makefile  README.md  app.lua  compile_commands.json  downloader.c  downloader.h  lua_clay.c  lua_clay.h  main.c  main.lua
qbrowser/assets/: solid.frag.glsl  solid.vert.glsl  text.frag.glsl
qbrowser/scripts/: demo.lua.bk
qbrowser/webroot/: app.lua
qbtui/: build.c  compile_commands.json  qbtui  qbtui.c
qbuild/: .gitignore  Makefile  qb.c  qb.h  qbuild.c  qbuild.h  qexec.c  qexec.h  qinc.h  qtest.h
qbuild/test/: .gitignore  add.c  add.h  build.c  other.c  test.c  tobuild.c
qinit/: compile_commands.json  qinit.c
qwayland/: .gitignore  Makefile  compile_commands.json  qlayout_renderer.c  qlayout_renderer.h  qshader.c  qwindow.c  qwindow.h
src/: camera.cpp  cfifo.cpp  cycle_timer.cpp  event_timer.cpp  libQ.cpp  log.cpp  shader.cpp  xml.cpp
src/avr/: bootloader.c
tests/: Makefile
tests/cfifo/: test1.cpp
tests/cycle_timer/: cycle_timer_test.cpp
tests/event_timer/: test1.cpp
tests/log/: test1.cpp
tests/toml/: sample.toml
tests/xml/: test1.cpp  test1.xml  test_config.cpp  test_config.xml
vcpkg_install/: vcpkg_install.cmake  vcpkg_install.sh
